--- a/menuDropDown/index.html
+++ b/menuDropDown/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Dropdown</title>
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -23,7 +24,13 @@
             </li>
             <li><a href="/">Serviços</a>
                 <ul>
-                    <li><a href="/">Web Design</a></li>
+                    <li class="drop"><a href="/">Web Design <i class="fas fa-angle-right"></i></a>
+                        <ul>
+                            <li><a href="/">PHP</a></li>
+                            <li><a href="/">CSS</a></li>
+                            <li><a href="/">HTML</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/">DevOps</a></li>
                     <li><a href="/">LPI</a></li>
                     <li><a href="/">CI / CD</a></li>
